# XFBrowser-Rewrite

./: AGENTS.md  README.md  build.bat  sync.bat
.github/workflows/: build.yml
config/: build-config.gni  gn-args.txt  sparse-checkout
docs/: architecture.md  build-guide.md  patch-guide.md
patches/fluent-ui/: 0001-window-mica.patch  0002-acrylic-windows10.patch  0003-fluent-ui-controls.patch  0004-bundle-newtab-extension.patch  0004-bundle-newtab-page.patch
patches/privacy/: 0001-ad-block.patch  0002-fingerprint.patch  0003-doh-dns.patch
patches/ungoogled-chromium/: 0001-remove-google-services.patch  0002-remove-telemetry.patch  0003-remove-ads.patch  0004-disable-google-login.patch  0005-force-incognito-private.patch  0006-disable-google-safebrowsing.patch  series
patches/ungoogled-chromium-official/upstream-fixes/: missing-dependencies.patch
src/extensions/: install.bat
src/extensions/newtab/: app.js  fluent-tokens.css  fluent-utils.js  index.html  manifest.json  style.css
src/firefox/: chrome.manifest  userChrome.css  userContent.css
src/fluent-ui/css/: fluent-addressbar.css  fluent-bookmarks.css  fluent-contextmenu.css  fluent-dark.css  fluent-downloads.css  fluent-light.css  fluent-settings.css  fluent-sidepanel.css  fluent-tabs.css  fluent-titlebar.css
src/fluent-ui/js/: fluent-addressbar.js  fluent-bookmarks.js  fluent-contextmenu.js  fluent-controls.js  fluent-downloads.js  fluent-settings.js  fluent-sidepanel.js  fluent-tabs.js  fluent-theme.js  fluent-titlebar.js
src/pages/newtab/: app.js  index.html  style.css
src/pages/settings/: app.js  (+2 more)
(+107 files in other folders)
